fix all existing tests